# MedCortex

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  docker-entrypoint.sh  pyproject.toml  ruff.toml
app/: config.py  main.py  models.py
app/rag/: bm25_store.py  chunker.py  cos_client.py  embeddings.py  faiss_store.py  generator.py  iterative_agent.py  orchestrator.py  pdf_extractor.py  pipeline.py  reranker.py  table_extractor.py  table_query.py  table_reasoner.py  vectorstore.py  verifier.py
