[project]
name = "medcortex"
version = "0.1.0"
description = "MedCortexAI Research Analyst - Verifiable Synthesis powered by watsonx.ai. An advanced AI research analyst for medical professionals, scientists, and academics."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MedCortex" }]

dependencies = [
  "streamlit>=1.37",
  "pydantic>=2.7",
  "pypdf>=4.2",
  "pdfplumber>=0.11.0",
  "langchain-text-splitters>=0.2",
  "ibm-watsonx-ai>=1.1.8",
  "faiss-cpu>=1.7.4",
  "numpy>=1.26",
  "ibm-cos-sdk>=2.13",
  "python-dotenv>=1.0",
  "rank-bm25>=0.2.2",
  "camelot-py>=0.11.0",
  "pandas>=2.2",
  "python-docx>=1.1"
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["**/*.py"]

[tool.uv]
dev-dependencies = [
  "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


